<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.cache.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_transfer"
        android:name="com.example.cache.ui.transfer.TransferFragment"
        android:label="@string/title_transfer"
        tools:layout="@layout/fragment_transfer" />

    <fragment
        android:id="@+id/navigation_accounts"
        android:name="com.example.cache.ui.accounts.AccountsFragment"
        android:label="@string/title_accounts"
        tools:layout="@layout/fragment_accounts" />

    <fragment
        android:id="@+id/navigation_account"
        android:name="com.example.cache.ui.account.AccountFragment"
        android:label="@string/title_account"
        tools:layout="@layout/fragment_account" />

    <fragment
        android:id="@+id/navigation_accounts_open"
        android:name="com.example.cache.ui.accounts.AccountsOpenFragment"
        android:label="@string/title_accounts_open"
        tools:layout="@layout/fragment_accounts_open" />

    <fragment
        android:id="@+id/navigation_accounts_products"
        android:name="com.example.cache.ui.accounts.AccountsProductsFragment"
        tools:layout="@layout/fragment_accounts_products" />

    <fragment
        android:id="@+id/navigation_investment"
        android:name="com.example.cache.ui.investment.InvestmentFragment"
        tools:layout="@layout/fragment_investment" />

</navigation>
