<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="account"
            type="com.example.cache.domain.model.Account" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:paddingTop="14dp"
            android:paddingBottom="14dp"
            android:paddingStart="18dp"
            android:paddingEnd="18dp">

            <TextView
                android:id="@+id/text_view_statements"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_view_statements"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/right_chevron"
                android:layout_width="20dp"
                android:layout_height="20dp"
                app:layout_constraintTop_toTopOf="@+id/text_view_statements"
                app:layout_constraintBottom_toBottomOf="@+id/text_view_statements"
                app:layout_constraintEnd_toEndOf="parent"
                app:srcCompat="@drawable/ic_right_arrow_tealish"
                android:contentDescription="@string/content_description_details" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/heading_account_information"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:layout_marginStart="18dp"
            android:layout_marginEnd="18dp"
            android:textSize="14sp"
            android:text="@string/heading_account_information" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:showDividers="middle"
            android:divider="@drawable/list_divider_inset"
            android:background="@color/white">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:paddingStart="18dp"
                android:paddingEnd="18dp">

                <TextView
                    android:id="@+id/label_account_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/gray_one"
                    android:text="@string/label_account_name" />

                <TextView
                    android:id="@+id/account_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@{account.product.productName}" />

            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:paddingStart="18dp"
                android:paddingEnd="18dp">

                <TextView
                    android:id="@+id/label_account_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/gray_one"
                    android:text="@string/label_account_number" />

                <TextView
                    android:id="@+id/account_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@{account.accountNumber}"
                    tools:text="6029281" />

            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:paddingStart="18dp"
                android:paddingEnd="18dp">

                <TextView
                    android:id="@+id/label_account_transit_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/gray_one"
                    android:text="@string/label_account_transit_number" />

                <TextView
                    android:id="@+id/account_transit_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@{account.transitNumber}"
                    tools:text="00062" />

            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:paddingStart="18dp"
                android:paddingEnd="18dp">

                <TextView
                    android:id="@+id/label_account_institution_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/gray_one"
                    android:text="@string/label_account_institution_number" />

                <TextView
                    android:id="@+id/account_institution_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@{account.institutionNumber}"
                    tools:text="003" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>


</layout>
