<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.accounts.AccountsOpenFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="20dp"
        android:paddingBottom="10dp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:background="@drawable/background_border_bottom">

        <TextView
            android:id="@+id/title_accounts_open"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textAlignment="center"
            android:text="@string/title_accounts_open"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/close"
            android:layout_width="20dp"
            android:layout_height="20dp"
            app:layout_constraintTop_toTopOf="@+id/title_accounts_open"
            app:layout_constraintBottom_toBottomOf="@+id/title_accounts_open"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/ic_close"
            android:contentDescription="@string/content_description_close" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:textSize="14sp"
        android:text="@string/text_accounts_open_prompt" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/account_types_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_list_border"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:listitem="@layout/list_item_accounts_types"
        tools:itemCount="2"/>

</LinearLayout>