<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="investmentViewModel"
            type="com.example.cache.ui.investment.InvestmentViewModel" />
    </data>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.95" />

            <TextView
                android:id="@+id/stock_symbol"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{investmentViewModel.selectedOrder.stockSymbol ?? investmentViewModel.selectedStock.symbol}"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="VCN.TO" />

            <TextView
                android:id="@+id/stock_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@{investmentViewModel.selectedOrder.stockName ?? investmentViewModel.selectedStock.name}"
                android:textAllCaps="true"
                android:textColor="@color/gray_one"
                app:layout_constraintBottom_toBottomOf="@id/guideline"
                app:layout_constraintStart_toEndOf="@id/stock_symbol"
                tools:text="Vanguard FTSE Canada" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:columnCount="4">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:paddingTop="5dp"
                android:paddingBottom="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/gray_two"
                    android:textSize="11sp"
                    android:text="@string/label_stock_ask"
                    tools:ignore="SmallSp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:text="@{investmentViewModel.selectedStockQuote.price}"
                    tools:text="31.35"
                    tools:ignore="SmallSp" />

            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:paddingTop="5dp"
                android:paddingBottom="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/gray_two"
                    android:textSize="11sp"
                    android:text="@string/label_stock_high"
                    tools:ignore="SmallSp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:text="@{investmentViewModel.selectedStockQuote.high}"
                    tools:text="31.40" />

            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:paddingTop="5dp"
                android:paddingBottom="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/gray_two"
                    android:textSize="11sp"
                    android:text="@string/label_stock_low"
                    tools:ignore="SmallSp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:text="@{investmentViewModel.selectedStockQuote.low}"
                    tools:text="31.32" />

            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:paddingTop="5dp"
                android:paddingBottom="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/gray_two"
                    android:textSize="11sp"
                    android:text="@string/label_stock_open"
                    tools:ignore="SmallSp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:text="@{investmentViewModel.selectedStockQuote.open}"
                    tools:text="31.40" />

            </LinearLayout>

        </GridLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:padding="15dp">

            <TextView
                android:id="@+id/label_quantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@string/label_quantity"
                app:layout_constraintTop_toTopOf="@id/order_quantity"
                app:layout_constraintBottom_toBottomOf="@id/order_quantity"
                app:layout_constraintStart_toStartOf="parent" />

            <EditText
                android:id="@+id/order_quantity"
                android:layout_width="192dp"
                android:layout_height="35dp"
                android:background="@color/gray_three"
                android:inputType="numberDecimal"
                android:hint="@string/hint_quantity"
                android:textAlignment="center"
                android:text="@={investmentViewModel.orderQuantityText}"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toEndOf="@+id/label_quantity"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0" />

            <TextView
                android:id="@+id/label_order_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@string/label_order_type"
                app:layout_constraintTop_toTopOf="@id/order_type"
                app:layout_constraintBottom_toBottomOf="@id/order_type"
                app:layout_constraintStart_toStartOf="parent" />

            <Spinner
                android:id="@+id/order_type"
                android:layout_width="192dp"
                android:layout_height="35dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/background_spinner_gray"
                android:selectedItemPosition="@={investmentViewModel.orderTypePosition}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/order_quantity" />

            <TextView
                android:id="@+id/label_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@string/label_account"
                app:layout_constraintTop_toTopOf="@id/account"
                app:layout_constraintBottom_toBottomOf="@id/account"
                app:layout_constraintStart_toStartOf="parent" />

            <Spinner
                android:id="@+id/account"
                android:layout_width="192dp"
                android:layout_height="35dp"
                android:layout_marginTop="10dp"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:background="@drawable/background_spinner_gray"
                android:selectedItemPosition="@={investmentViewModel.orderAccountPosition}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/order_type" />

            <Button
                android:id="@+id/button_buy"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="44dp"
                android:backgroundTint="@color/tealish"
                android:padding="20dp"
                android:text="@string/button_buy"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="13sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/account" />

            <Button
                android:id="@+id/button_sell"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/red"
                android:padding="20dp"
                android:text="@string/button_sell"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="13sp"
                android:textStyle="bold"
                app:layout_constraintBaseline_toBaselineOf="@id/button_buy"
                app:layout_constraintEnd_toEndOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

</layout>